[gd_scene load_steps=6 format=3 uid="uid://dyyosskooy1c"]

[ext_resource type="Texture2D" uid="uid://dpgl4bn7b4ulj" path="res://images/button.png" id="1_muyl0"]
[ext_resource type="Script" path="res://src/hud.gd" id="1_rc2ie"]
[ext_resource type="PackedScene" uid="uid://bs0iykp71nca2" path="res://utils/progress.tscn" id="2_xv6cu"]
[ext_resource type="Texture2D" uid="uid://cj88jfrbfmtf2" path="res://images/enter.png" id="3_4neue"]
[ext_resource type="Texture2D" uid="uid://b0k042bwtxxas" path="res://images/exit.png" id="4_gfmvn"]

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_rc2ie")

[node name="moveBtn" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="right" type="TextureButton" parent="moveBtn"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 240.0
offset_top = -138.0
offset_right = 351.0
offset_bottom = -82.0
grow_vertical = 0
texture_normal = ExtResource("1_muyl0")
texture_pressed = ExtResource("1_muyl0")
texture_hover = ExtResource("1_muyl0")

[node name="left" type="TextureButton" parent="moveBtn"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 76.0
offset_top = -138.0
offset_right = 187.0
offset_bottom = -82.0
grow_vertical = 0
texture_normal = ExtResource("1_muyl0")
texture_pressed = ExtResource("1_muyl0")
texture_hover = ExtResource("1_muyl0")
flip_h = true

[node name="progress" parent="." instance=ExtResource("2_xv6cu")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -607.0
offset_top = 13.0
offset_right = -10.0
offset_bottom = 159.0
grow_horizontal = 0

[node name="ActionBtn" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="enter" type="TextureButton" parent="ActionBtn"]
visible = false
layout_mode = 0
offset_left = -199.0
offset_top = -96.0
offset_right = -119.0
offset_bottom = -23.0
texture_normal = ExtResource("3_4neue")
texture_pressed = ExtResource("3_4neue")
texture_hover = ExtResource("3_4neue")

[node name="Exit" type="TextureButton" parent="ActionBtn"]
visible = false
layout_mode = 0
offset_left = -88.0
offset_top = -97.0
offset_right = -8.0
offset_bottom = -24.0
texture_normal = ExtResource("4_gfmvn")
texture_pressed = ExtResource("4_gfmvn")
texture_hover = ExtResource("4_gfmvn")

[connection signal="button_down" from="moveBtn/right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="moveBtn/right" to="." method="_on_right_button_up"]
[connection signal="button_down" from="moveBtn/left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="moveBtn/left" to="." method="_on_left_button_up"]
[connection signal="pressed" from="ActionBtn/enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="ActionBtn/Exit" to="." method="_on_exit_pressed"]
